WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
304221
REGRESSION(
304450@main
): [WebXR Hit Test][OpenXR] OpenXRCoordinator::populateFrameData has to check hitTestManager isn't null
https://bugs.webkit.org/show_bug.cgi?id=304221
Summary
REGRESSION(304450@main): [WebXR Hit Test][OpenXR] OpenXRCoordinator::populate...
Fujii Hironori
Reported
2025-12-15 17:14:10 PST
REGRESSION(
304450@main
): [WebXR Hit Test][OpenXR] OpenXRCoordinator::populateFrameData has to check hitTestManager isn't null OpenXRHitTestManager::create() may return null if required extentions are available. OpenXRCoordinator::populateFrameData has to check OpenXRCoordinator::RenderState member hitTestManager isn't null before using it.
Attachments
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2025-12-15 17:16:38 PST
Pull request:
https://github.com/WebKit/WebKit/pull/55444
EWS
Comment 2
2025-12-18 04:45:38 PST
Committed
304669@main
(cd50c33408a4): <
https://commits.webkit.org/304669@main
> Reviewed commits have been landed. Closing PR #55444 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-12-18 04:46:12 PST
<
rdar://problem/166782321
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug