REGRESSION(304450@main): [WebXR Hit Test][OpenXR] Add null checks of the return value of OpenXRHitTestManager::create() https://bugs.webkit.org/show_bug.cgi?id=304221

Reviewed by Sergio Villar Senin.

OpenXRHitTestManager::create() may return null if required OpenXR extentions
aren't available. OpenXRCoordinator methods requestHitTestSource and
requestTransientInputHitTestSource have to do null checks, and throws
NotSupportedError.

Test: Tools/TestWebKitAPI/Tests/WebKitGLib/TestWebKitWebXR.cpp

* Source/WebKit/UIProcess/XR/openxr/PlatformXROpenXR.cpp:
(WebKit::OpenXRCoordinator::requestHitTestSource):
(WebKit::OpenXRCoordinator::requestTransientInputHitTestSource):
* Tools/TestWebKitAPI/Tests/WebKitGLib/TestWebKitWebXR.cpp:
(testWebKitXRHitTest):
(beforeAll):

Canonical link: https://commits.webkit.org/304669@main